# ROS_Project

./: README.md
filters_project/: README.md
filters_project/filters_project/: CMakeLists.txt  package.xml
filters_project/filters_project/params/: navsat_transform_params.yaml
first_project/: CMakeLists.txt  README.md  info.txt  notes.txt  package.xml
first_project/cfg/: parameters.cfg
first_project/launch/: first_project.launch  first_project_with_bag.launch
first_project/odom_project/: package.xml
first_project/odom_project/launch/: odom_project_with_bag.launch
first_project/src/: node.cpp
odom_project/: README.md
odom_project/odom_project/msg/: odometryMessage.msg
second_project/: CMakeLists.txt  README.md  info.txt
second_project/filters_project/launch/: filters_project.launch  filters_project_with_bag.launch
second_project/filters_project/params/: ekf_params.yaml  imu_filter_params.yaml
second_project/launch/: robot_localization.launch  second_project.launch
second_project/params/: ekf_params.yaml  navsat_transform_params.yaml
second_project/src/: node.cpp  oodmetry_node.cpp
